--- a/content/blog/2019-02-26-post_test.md
+++ b/content/blog/2019-02-26-post_test.md
@@ -1,6 +1,10 @@
 ---
-title: happy test
-date: '2017-05-28'
+title: md file test
+date: '2019-02-26'
+tags:
+  - test1
+  - test2
+  - test3
 ---
 
 Far far away, behind the word mountains, far from the countries Vokalia and
