--- a/content/blog/2018-12-27-2018memoir.md
+++ b/content/blog/2018-12-27-2018memoir.md
@@ -1,9 +1,9 @@
 ---
-title: 2018 회고록
+title: '2018 회고록'
 date: '2018-12-27'
 tags:
-  - 2018
-  - memorior
+  - '2018'
+  - 'memorior'
 ---
 
 휴가를 즐기는 중 잠이 안와서 작성하는 2018년도 회고록.
